Verif/Test/Invalide/test_erreur_3.74.deca
// Description:
//    Programme soulevant l'erreur (3.74)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'boolean' sont incompatibles avec l'opérateur binaire '%' (règle 3.74)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

int var;
{
   var = 1 % true;
}